--- a/flappy.html
+++ b/flappy.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./flappy.css">
     <link rel="import" href="./fonts/Pixel.ttf">
     <!-- <link rel="import" href="./fonts/Pixel.ttf"> -->
-    <title>Document</title>
+    <title>FlappyBird</title>
   </head>
 
   <body>
