--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   </head>
 
   <body>
-    <h1>Flappy Bird</h1>
-    <div class="content"></div>
+    <main>
+      <h1>Flappy Bird</h1>
+      <div class="content"></div>
+    </main>
+
     <script src="./index.js"></script>
   </body>
 </html>
