--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <h1>Flappy Bird</h1>
-      <div class="content"></div>
+      <div id="content"></div>
     </main>
 
     <script src="./index.js"></script>
