--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <body>
     <main>
       <h1>Flappy Bird</h1>
-      <div id="content"></div>
+      <div id="content">
+        <div id="startMenu">
+          <div id="startButton">
+            <img id="menuBird" src="./imgs/bird.png" alt="" />
+            <p>Start</p>
+          </div>
+        </div>
+      </div>
     </main>
-
-    <script src="./index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
