add restart button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <img id="menuBird" src="./imgs/bird.png" alt="" />
             <p>Start</p>
           </div>
+          <div id="restartButton" class="">
+            <button id="reButton">Restart</button>
+          </div>
         </div>
       </div>
     </main>
